deploy/operators/010_route_access.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: grafana-access
  labels:
    app: grafana-dedalus
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: grafana-tls
spec:
  port:
    targetPort: https
  tls:
    termination: reencrypt
  to:
    kind: Service
    name: grafana-service
