deploy/operators/010_route_admin.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: grafana-admin
  labels:
    app: grafana-dedalus
spec:
  port:
    targetPort: grafana
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: grafana-service
